z-index correction

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
     justify-content: flex-start;
     align-items: center;
     background-color: #333;
-    z-index: 1000;
+    z-index: 9999;
   }
   /* Style the navigation bar links */
   .navbar a {
@@ -122,6 +122,7 @@
   max-width: 1000px;
   position: relative;
   margin: auto;
+  z-index: 99;
 }
 
 /* Next & previous buttons */
